--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-smooth-dnd": "^0.8.1",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
